@@ -19,7 +19,7 @@
 ##                                                                            ##
 ################################################################################
 
-cmake_minimum_required(VERSION 3.16...3.27)
+cmake_minimum_required(VERSION 3.16...3.31)
 
 project( NCrystalRoot LANGUAGES C CXX )
 
