@@ -18,7 +18,7 @@
 ##                                                                            ##
 ################################################################################
 
-cmake_minimum_required(VERSION 3.20...3.30)
+cmake_minimum_required(VERSION 3.16...3.31)
 
 project( ExampleNCrystalProject VERSION 0.0.1 LANGUAGES CXX C )
 
