@@ -18,7 +18,7 @@
 ##                                                                            ##
 ################################################################################
 
-cmake_minimum_required(VERSION 3.16...3.27)
+cmake_minimum_required(VERSION 3.16...3.31)
 
 #Detect skbuild mode (std/monolithic) if appropriate:
 
