@@ -1,4 +1,5 @@
 v4.1.3 (work in progress)
+     * Update cmake_minimum_required statements in CMake code.
      * ...
 
 v4.1.2 2025-02-26
